traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:14: error: ';' expected but 'else' found.
    } else if (getX() == 0) {
      ^